force-app/main/default/objects/ringdna100__App_Config__c/ringdna100__App_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ringDNA App Config</label>
</CustomObject>