force-app/main/default/objects/ringdna100__App_Config__c/fields/ringdna100__Disable_Feature_Agent_Stats__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Disable_Feature_Agent_Stats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Feature: Agent Stats</label>
    <type>Checkbox</type>
</CustomField>