force-app/main/default/objects/ringdna100__App_Config__c/fields/ringdna100__Disable_Feature_Link_Calls_to_Opp__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Disable_Feature_Link_Calls_to_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Feature: Link Calls to Opp</label>
    <type>Checkbox</type>
</CustomField>