force-app/main/default/objects/ringdna100__App_Config__c/fields/ringdna100__Disable_Feature_Time_to_First_Response__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Disable_Feature_Time_to_First_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Feature: Time to First Response</label>
    <type>Checkbox</type>
</CustomField>