force-app/main/default/objects/ringdna100__App_Config__c/fields/ringdna100__Disable_Time_to_First_Resp_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Disable_Time_to_First_Resp_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable: Time to First Resp - Campaign</label>
    <type>Checkbox</type>
</CustomField>