force-app/main/default/objects/ringdna100__App_Config__c/fields/ringdna100__Mute_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Mute_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute All Triggers</label>
    <type>Checkbox</type>
</CustomField>