force-app/main/default/objects/ringdna100__App_Config__c/fields/ringdna100__Mute_Trigger_Check_Account_Field_Update__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Mute_Trigger_Check_Account_Field_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute Trigger: Check Account Field Update</label>
    <type>Checkbox</type>
</CustomField>